Add item coding to subs through 30

--- a/analysis/SST Item Test Analysis.ipynb
+++ b/analysis/SST Item Test Analysis.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -259,6 +259,54 @@
        "      <td> control</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td> 20</td>\n",
+       "      <td>  stress</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td> 21</td>\n",
+       "      <td> control</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td> 22</td>\n",
+       "      <td> control</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td> 23</td>\n",
+       "      <td> control</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td> 24</td>\n",
+       "      <td> control</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td> 26</td>\n",
+       "      <td> control</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td> 29</td>\n",
+       "      <td>  stress</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td> 30</td>\n",
+       "      <td>  stress</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -280,10 +328,18 @@
        "12    14   stress     NaN\n",
        "13    15   stress     NaN\n",
        "15    18   stress     NaN\n",
-       "16    19  control     NaN"
+       "16    19  control     NaN\n",
+       "17    20   stress     NaN\n",
+       "18    21  control     NaN\n",
+       "19    22  control     NaN\n",
+       "20    23  control     NaN\n",
+       "21    24  control     NaN\n",
+       "22    26  control     NaN\n",
+       "23    29   stress     NaN\n",
+       "24    30   stress     NaN"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -342,7 +398,15 @@
       "14\n",
       "15\n",
       "18\n",
-      "19\n"
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "26\n",
+      "29\n",
+      "30\n"
      ]
     }
    ],
@@ -370,140 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>run</th>\n",
-       "      <th>trial</th>\n",
-       "      <th>onset</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>town</th>\n",
-       "      <th>pic</th>\n",
-       "      <th>itemNum</th>\n",
-       "      <th>resp</th>\n",
-       "      <th>respRT</th>\n",
-       "      <th>itemType</th>\n",
-       "      <th>acc</th>\n",
-       "      <th>subid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td> 1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td>  1.0020</td>\n",
-       "      <td> 58.2601</td>\n",
-       "      <td> Town6</td>\n",
-       "      <td> env6</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> goat clooney lettuce</td>\n",
-       "      <td> 46.9638</td>\n",
-       "      <td> animal</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td> 2</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td>  1.0020</td>\n",
-       "      <td> 58.2601</td>\n",
-       "      <td> Town6</td>\n",
-       "      <td> env6</td>\n",
-       "      <td> 2</td>\n",
-       "      <td>              lettuce</td>\n",
-       "      <td>  6.7958</td>\n",
-       "      <td> object</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td> 3</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td>  1.0020</td>\n",
-       "      <td> 58.2601</td>\n",
-       "      <td> Town6</td>\n",
-       "      <td> env6</td>\n",
-       "      <td> 3</td>\n",
-       "      <td>              clonney</td>\n",
-       "      <td>  4.4965</td>\n",
-       "      <td>   face</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td> 4</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 2</td>\n",
-       "      <td> 59.3028</td>\n",
-       "      <td> 30.2167</td>\n",
-       "      <td> Town1</td>\n",
-       "      <td> env1</td>\n",
-       "      <td> 1</td>\n",
-       "      <td>                 cow </td>\n",
-       "      <td>  7.7858</td>\n",
-       "      <td> animal</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td> 5</td>\n",
-       "      <td> 1</td>\n",
-       "      <td> 2</td>\n",
-       "      <td> 59.3028</td>\n",
-       "      <td> 30.2167</td>\n",
-       "      <td> Town1</td>\n",
-       "      <td> env1</td>\n",
-       "      <td> 2</td>\n",
-       "      <td>                    ?</td>\n",
-       "      <td> 20.4377</td>\n",
-       "      <td>   face</td>\n",
-       "      <td> 0</td>\n",
-       "      <td> 1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index  run  trial    onset  duration   town   pic  itemNum  \\\n",
-       "0      1    1      1   1.0020   58.2601  Town6  env6        1   \n",
-       "1      2    1      1   1.0020   58.2601  Town6  env6        2   \n",
-       "2      3    1      1   1.0020   58.2601  Town6  env6        3   \n",
-       "3      4    1      2  59.3028   30.2167  Town1  env1        1   \n",
-       "4      5    1      2  59.3028   30.2167  Town1  env1        2   \n",
-       "\n",
-       "                   resp   respRT itemType  acc subid  \n",
-       "0  goat clooney lettuce  46.9638   animal    0     1  \n",
-       "1               lettuce   6.7958   object    0     1  \n",
-       "2               clonney   4.4965     face    0     1  \n",
-       "3                  cow    7.7858   animal    0     1  \n",
-       "4                     ?  20.4377     face    0     1  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt.head()"
    ]
